force-app/main/default/objects/Quotation__c/fields/Premium_Charges_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges_Amount_3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Premium Charges Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>