force-app/main/default/objects/Quotation__c/fields/Premium_Charges_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges_Category_1__c</fullName>
    <label>Premium Charges Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>