force-app/main/default/objects/Quotation__c/fields/Premium_Charges_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges_Category_2__c</fullName>
    <label>Premium Charges Category 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>