force-app/main/default/objects/Quotation__c/fields/Prepared_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepared_Date__c</fullName>
    <description>Date when the quote was created</description>
    <label>Prepared Date</label>
    <type>Date</type>
</CustomField>