force-app/main/default/objects/Quotation__c/fields/Print_Customer_Pay_Plan__c.field-meta.xml
<CustomField>
    <fullName>Print_Customer_Pay_Plan__c</fullName>
    <formula>HYPERLINK(&quot;/apex/CustomerPaymentPlanView?qId=&quot;+Id,&quot;Print Customer Pay Plan&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Customer Pay Plan</label>
    <type>Text</type>
</CustomField>