force-app/main/default/objects/Quotation__c/fields/Print_Deal_Description_Internal__c.field-meta.xml
<CustomField>
    <fullName>Print_Deal_Description_Internal__c</fullName>
    <formula>HYPERLINK(&quot;/apex/DealDescription?qId=&quot; +Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Deal Description (Without Letterhead)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrintDealDescription(Without Letterhead)</label>
    <type>Text</type>
</CustomField>