force-app/main/default/objects/Quotation__c/fields/Print_Discount_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Print_Discount_Snapshot__c</fullName>
    <formula>HYPERLINK(&quot;/apex/QuotationDiscountView?qId=&quot;+Id,&quot;Print Discount Snapshot&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Discount Snapshot</label>
    <type>Text</type>
</CustomField>