force-app/main/default/objects/Quotation__c/fields/Print_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Print_Quotation__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot; +Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Print Quotation (Online Version)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Quotation (Online Version)</label>
    <type>Text</type>
</CustomField>