force-app/main/default/objects/Quotation__c/fields/Print_Quotation_Internal__c.field-meta.xml
<CustomField>
    <fullName>Print_Quotation_Internal__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Internal&apos;+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Print Quotation Internal&quot;)</formula>
    <label>Print Quotation Internal</label>
    <type>Text</type>
</CustomField>