force-app/main/default/objects/Quotation__c/fields/Print_Quotation_Internal_On_Letter_Head__c.field-meta.xml
<CustomField>
    <fullName>Print_Quotation_Internal_On_Letter_Head__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Internal&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Quotation Internal On Letter Head&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Quotation Internal On Letter Head</label>
    <type>Text</type>
</CustomField>