force-app/main/default/objects/Quotation__c/fields/Print_Quotation_on_Letter_head__c.field-meta.xml
<CustomField>
    <fullName>Print_Quotation_on_Letter_head__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Quotation5View?qId=&quot;+Id+&quot;&amp;view=&quot;+&apos;Customer&apos;+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Print Quotation (Without Letterhead)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Quotation (Without Letterhead)</label>
    <type>Text</type>
</CustomField>