force-app/main/default/objects/Quotation__c/fields/Proj_Maint_Charges_Desc_3__c.field-meta.xml
<CustomField>
    <fullName>Proj_Maint_Charges_Desc_3__c</fullName>
    <label>Proj Maint Charges Desc 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>