force-app/main/default/objects/Quotation__c/fields/Project_Maintenance_Charges_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Project_Maintenance_Charges_Category_1__c</fullName>
    <label>Project Maintenance Charges Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>