force-app/main/default/objects/Quotation__c/fields/Project_Maintenance_Charges_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Maintenance_Charges_Category_2__c</fullName>
    <label>Project Maintenance Charges Category 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>