force-app/main/default/objects/Quotation__c/fields/Project_Maintenance_Charges_ST_3__c.field-meta.xml
<CustomField>
    <fullName>Project_Maintenance_Charges_ST_3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Maintenance Charges ST 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>