force-app/main/default/objects/Quotation__c/fields/Project_Specific_Charges_Category_3__c.field-meta.xml
<CustomField>
    <fullName>Project_Specific_Charges_Category_3__c</fullName>
    <label>Project Specific Charges Category 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>