force-app/main/default/objects/Quotation__c/fields/Project_Specific_Charges_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Project_Specific_Charges_Description_1__c</fullName>
    <label>Project Specific Charges Description 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>