force-app/main/default/objects/Quotation__c/fields/Puzzle_Car_Park__c.field-meta.xml
<CustomField>
    <fullName>Puzzle_Car_Park__c</fullName>
    <label>Puzzle Car Park</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>