force-app/main/default/objects/Quotation__c/fields/Puzzle_Car_Park_Amount__c.field-meta.xml
<CustomField>
    <fullName>Puzzle_Car_Park_Amount__c</fullName>
    <label>Puzzle Car Park Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>