force-app/main/default/objects/Quotation__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by level 1</fullName>
            </value>
            <value>
                <fullName>Rejected by level 1</fullName>
            </value>
            <value>
                <fullName>Approved by level 2</fullName>
            </value>
            <value>
                <fullName>Rejected by level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>