force-app/main/default/objects/Quotation__c/fields/Referral_Passback__c.field-meta.xml
<CustomField>
    <fullName>Referral_Passback__c</fullName>
    <formula>ROUND(IF(Discount_10_L__c &gt; 0,Discount_10_L__c / Agreement_Value_D__c, 0),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Referral Passback% is greater than 1% then prevent submit for approval.</inlineHelpText>
    <label>Referral Passback%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>