force-app/main/default/objects/Quotation__c/fields/Registration_Charges__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>