force-app/main/default/objects/Quotation__c/fields/Saleable__c.field-meta.xml
<CustomField>
    <fullName>Saleable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saleable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>