force-app/main/default/objects/Quotation__c/fields/Saleable_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area_Sq_Ft__c</fullName>
    <formula>Project_Unit__r.Saleable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saleable Area(Sq. Ft.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>