force-app/main/default/objects/Quotation__c/fields/Sales_Manager_Opp__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Opp__c</fullName>
    <formula>TEXT(Opportunity__r.RW_Sales_Associate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager (Opportunity)</label>
    <type>Text</type>
</CustomField>