force-app/main/default/objects/Quotation__c/fields/Sales_Manager_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Remarks__c</fullName>
    <label>Offer Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>