force-app/main/default/objects/Quotation__c/fields/Service_Tax_On_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_On_Token_Amount__c</fullName>
    <formula>Project__r.Service_Tax_Required_On_Token_Amount_c__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tax On Token Amount</label>
    <type>Checkbox</type>
</CustomField>