force-app/main/default/objects/Quotation__c/fields/Service_Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Total__c</fullName>
    <formula>(Premium_Charges_ST_1__c + 
Premium_Charges_ST_2__c + 
Premium_Charges_ST_3__c + 
Premium_Charges_ST_4__c + 
Project_Maintenance_Charges_ST_1__c + 
Project_Maintenance_Charges_ST_2__c + 
Project_Maintenance_Charges_ST_3__c + 
Project_Specific_Charges_ST_1__c + 
Project_Specific_Charges_ST_2__c + 
Project_Specific_Charges_ST_3__c + 
Legal_Charges_ST__c + 
Common_Area_Maintenance_ST__c + 
Club_Membership_ST__c + 
MVAT_ST_D__c + 
Utility_Charges_ST__c + 
Infrastructure_Charges_ST__c + 
X2_Yr_Advance_Maintenance_ST__c + 
Society_Formation_ST__c + 
Share_Money_ST__c + 
Agreement_Value_ST_D__c)</formula>
    <label>Service Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>