force-app/main/default/objects/Quotation__c/fields/Service_Taxes_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Taxes_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Service TaxesTotal</description>
    <label>Service Taxes Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>