force-app/main/default/objects/Quotation__c/fields/Service_Taxes_Total_D__c.field-meta.xml
<CustomField>
    <fullName>Service_Taxes_Total_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Services Taxes total post discount</description>
    <label>Service Taxes Total (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>