force-app/main/default/objects/Quotation__c/fields/Single_car_park_Additional__c.field-meta.xml
<CustomField>
    <fullName>Single_car_park_Additional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Single Covered (Additional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>