force-app/main/default/objects/Quotation__c/fields/Single_Open_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>Single_Open_Earmarked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Single Open (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>