force-app/main/default/objects/Quotation__c/fields/Society_Charges_Total__c.field-meta.xml
<CustomField>
    <fullName>Society_Charges_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Society Charges Total (sum total of Infra, Club, Common, Utility and any other charges bucket as society charges)</description>
    <label>Society Charges Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>