force-app/main/default/objects/Quotation__c/fields/Society_Formation__c.field-meta.xml
<CustomField>
    <fullName>Society_Formation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Society Formation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>