force-app/main/default/objects/Quotation__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <formula>TEXT(Opportunity__r.RW_Sourcing_Manager__c)</formula>
    <label>Sourcing Manager</label>
    <type>Text</type>
</CustomField>