force-app/main/default/objects/Quotation__c/fields/Stack_Additional__c.field-meta.xml
<CustomField>
    <fullName>Stack_Additional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stilt (Additional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>