force-app/main/default/objects/Quotation__c/fields/Stack_Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stack_Additional_Amount__c</fullName>
    <label>Stack (Additional) Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>