force-app/main/default/objects/Quotation__c/fields/Stack_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>Stack_Earmarked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stilt (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>