force-app/main/default/objects/Quotation__c/fields/Stamp_Duty_and_Registration_Total__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_and_Registration_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total (Stamp Duty and Registration)</description>
    <label>Stamp Duty and Registration Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>