force-app/main/default/objects/Quotation__c/fields/Stamp_Duty_and_Registration_Total_D__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_and_Registration_Total_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stamp Duty and Registration Total post discount</description>
    <label>Stamp Duty and Registration Total (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>