force-app/main/default/objects/Quotation__c/fields/Stamp_Duty_D__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stamp Duty on Discounted Agreement Value</description>
    <label>Stamp Duty (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>