force-app/main/default/objects/Quotation__c/fields/Stamp_duty_payable_by_Runwal__c.field-meta.xml
<CustomField>
    <fullName>Stamp_duty_payable_by_Runwal__c</fullName>
    <label>Stamp duty payable by Runwal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>