force-app/main/default/objects/Quotation__c/fields/Tandem_Open_Additional__c.field-meta.xml
<CustomField>
    <fullName>Tandem_Open_Additional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Covered Stack (Additional)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>