force-app/main/default/objects/Quotation__c/fields/Tandem_Open_Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tandem_Open_Additional_Amount__c</fullName>
    <label>Tandem Open (Additional) Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>