force-app/main/default/objects/Quotation__c/fields/Total_Car_Park_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Car_Park_Amount__c</fullName>
    <formula>IF(No_of_parking__c &gt; 0, Single_Covered_Additional_Amount__c + Tandem_Covered_Additional_Amount__c + Single_Open_Additional_Amount__c +
			Tandem_Open_Additional_Amount__c + Stilt_Additional_Amount__c + MLCP_Additional_Amount__c + Basement_Additional_Amount__c + Podium_Amount__c +  Puzzle_Car_Park_Amount__c 
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Car Park Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>