force-app/main/default/objects/Quotation__c/fields/Total_Discount_lumpsum_Wo_CP_Passback__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_lumpsum_Wo_CP_Passback__c</fullName>
    <formula>Customer_Total_Discount_L__c -  Discount_9_L__c - Discount_10_L__c - Discount_11_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Discount lumpsum excluding CP Passback,Referral Passback,Referral Discount.</inlineHelpText>
    <label>Total Discount lumpsum Wo CP Passback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>