force-app/main/default/objects/Quotation__c/fields/Total_Discount_without_CP_Passback__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_without_CP_Passback__c</fullName>
    <formula>Customer_Total_Discount_PSF__c -  Discount_9_PSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount without CP Passback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>