force-app/main/default/objects/Quotation__c/fields/Total_No_of_Parking__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Parking__c</fullName>
    <formula>Single_car_park_Earmarked__c + Tandem_car_park_Earmarked__c + Single_Open_Earmarked__c + Tandem_Open_Earmarked__c + Stack_Earmarked__c + Single_car_park_Additional__c + Tandem_car_park_Additional__c + Single_Open_Additional__c + Tandem_Open_Additional__c + Stack_Additional__c + MLCP_Earmarked__c + MLCP_Additional__c + Basement_Additional__c
+Podium__c +  Puzzle_Car_Park__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>