force-app/main/default/objects/Quotation__c/fields/Utility_Charges__c.field-meta.xml
<CustomField>
    <fullName>Utility_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Electric water and gas and any other utility related charges</description>
    <label>Utility Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>