force-app/main/default/objects/Quotation__c/fields/Valid_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Till_Date__c</fullName>
    <description>validity of the quote</description>
    <label>Valid Till Date</label>
    <type>Date</type>
</CustomField>