force-app/main/default/objects/Quotation__c/fields/Walkin_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Customer_Reference__c</fullName>
    <formula>Opportunity__r.RW_Walkin_Customer_Reference__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.RW_Walkin_Customer_Reference__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walkin Customer Reference</label>
    <type>Text</type>
</CustomField>