force-app/main/default/objects/Quotation__c/fields/Walkin_Referral_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Referral_Sub_Source__c</fullName>
    <formula>text(Opportunity__r.Referral_Sub_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walkin Referral Sub Source</label>
    <type>Text</type>
</CustomField>