force-app/main/default/objects/Quotation__c/fields/walkin_Source__c.field-meta.xml
<CustomField>
    <fullName>walkin_Source__c</fullName>
    <formula>TEXT(Opportunity__r.Walkin_Source__c)</formula>
    <label>walkin Source</label>
    <type>Text</type>
</CustomField>